--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node test.ts",
-    "test": "jest"
+    "start": "ts-node tests.ts",
+    "build": "tsc",
+    "test": "jest",
+    "format": "prettier --write .",
+    "test:watch": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +16,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
+    "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   }
 }
