--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node tests.ts",
+    "start": "ts-node test.ts",
     "build": "tsc",
     "test": "jest",
     "format": "prettier --write .",
